// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Automated Storybook Snapshots Ui/Icons All Icons 1`] = `
<div
  style="height: 100%; width: 100%; background: white;"
>
  <table>
    <tr>
      <th>
        Name
      </th>
      <th>
        Component
      </th>
    </tr>
    <tr>
      <td>
        chevron-bas
      </td>
      <td>
        <svg
          aria-labelledby="chevron-bas"
          class="component-icon"
          fill="#666"
          height="24px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-chevron-bas"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        chevron-haut
      </td>
      <td>
        <svg
          aria-labelledby="chevron-haut"
          class="component-icon"
          fill="#666"
          height="24px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-chevron-haut"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        download
      </td>
      <td>
        <svg
          aria-labelledby="download"
          class="component-icon"
          fill="#666"
          height="24px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
  </table>
</div>
`;

exports[`Automated Storybook Snapshots Ui/Icons Icon All Size 1`] = `
<div
  style="height: 100%; width: 100%; background: white;"
>
  <table>
    <tr>
      <th>
        Name
      </th>
      <th>
        Size
      </th>
    </tr>
    <tr>
      <td>
        xs
      </td>
      <td>
        <svg
          aria-labelledby="download"
          class="component-icon"
          fill="#666"
          height="24px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        s
      </td>
      <td>
        <svg
          aria-labelledby="download"
          class="component-icon"
          fill="#666"
          height="16px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        m
      </td>
      <td>
        <svg
          aria-labelledby="download"
          class="component-icon"
          fill="#666"
          height="24px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        l
      </td>
      <td>
        <svg
          aria-labelledby="download"
          class="component-icon"
          fill="#666"
          height="48px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="48px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        xl
      </td>
      <td>
        <svg
          aria-labelledby="download"
          class="component-icon"
          fill="#666"
          height="128px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="128px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
    <tr>
      <td>
        xxl
      </td>
      <td>
        <svg
          aria-labelledby="download"
          class="component-icon"
          fill="#666"
          height="24px"
          role="application"
          tabindex="-1"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <svg
            aria-hidden="true"
            style="position: absolute; width: 0px; height: 0px; overflow: hidden;"
            version="1.1"
            xmlns="http://www.w3.org/2000/svg"
            xmlns:xlink="http://www.w3.org/1999/xlink"
          >
            <symbol
              id="icon-chevron-bas"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-bas
              </title>
              <path
                d="M12 13.172l4.95-4.95 1.414 1.414L12 16 5.636 9.636 7.05 8.222z"
              />
            </symbol>
            <symbol
              id="icon-chevron-haut"
              viewBox="0 0 24 24"
            >
              <title>
                chevron-haut
              </title>
              <path
                d="M12 10.828l-4.95 4.95-1.414-1.414L12 8l6.364 6.364-1.414 1.414z"
              />
            </symbol>
            <symbol
              id="icon-download"
              viewBox="0 0 24 24"
            >
              <title>
                download
              </title>
              <path
                d="M3 19h18v2H3v-2zm10-5.828L19.071 7.1l1.414 1.414L12 17 3.515 8.515 4.929 7.1 11 13.17V2h2v11.172z"
              />
            </symbol>
          </svg>
          <use
            href="#icon-download"
          />
        </svg>
      </td>
    </tr>
  </table>
</div>
`;
